--- a/src/AppBundle/Resources/views/Excel/upload_form.html.twig
+++ b/src/AppBundle/Resources/views/Excel/upload_form.html.twig
@@ -1,12 +1,9 @@
-<form action="{{ path('excel_upload') }}" method="post" enctype="multipart/form-data">
+<form action="{{ path('excel_upload_process') }}" method="post" enctype="multipart/form-data">
     <p>
 	    <input type="file" name="upfile">
     </p>
     <p>
     	<input type="checkbox" name="create" id="create" value="on"><label for="create">Enable card creation</label>
-    </p>
-    <p>
-    	<input type="checkbox" name="universal" id="universal" value="on"><label for="create">Enable updating universal fields</label>
     </p>
     <p>
     	<input type="submit" value="Submit">
