--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -2,9 +2,9 @@
 
 {% block hexagon %}{{ decklist.faction_code }}{% endblock %}
 {% block head %}
-<script src="{{ asset('/web/bundles/app/js/nrdb.draw_simulator.js') }}"></script>
-<script src="{{ asset('/web/bundles/app/js/nrdb.card_modal.js') }}"></script>
-<script src="{{ asset('/web/bundles/app/js/decklist.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/nrdb.draw_simulator.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/nrdb.card_modal.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/decklist.js') }}"></script>
 <script type="text/javascript">
 
 var Identity = null,
