--- a/src/AppBundle/Resources/views/Builder/directimport.html.twig
+++ b/src/AppBundle/Resources/views/Builder/directimport.html.twig
@@ -2,9 +2,9 @@
 
 {% block head %}
 
-<script src="{{ asset('/web/bundles/app/js/directimport.js') }}"></script>
-<script src="{{ asset('/web/bundles/app/js/nrdb.fuzzy_search.js') }}"></script>
-<script src="{{ asset('/web/bundles/app/libs/string_score.min.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/directimport.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/nrdb.fuzzy_search.js') }}"></script>
+<script src="{{ asset('/bundles/app/libs/string_score.min.js') }}"></script>
 <script type="text/javascript">
 
 var CardDB, CardNames;
