--- a/src/AppBundle/Resources/views/Search/search.html.twig
+++ b/src/AppBundle/Resources/views/Search/search.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block head %}
-<script src="{{ asset('/web/bundles/app/js/search.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/search.js') }}"></script>
 {% endblock %}
 
 {% block body %}
