--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container">
 
-<script type="text/javascript" src="{{ asset('/web/bundles/netrunnerdbcards/js/save-settings.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/bundles/netrunnerdbcards/js/save-settings.js') }}"></script>
 
 <div class="row">
 
@@ -52,30 +52,18 @@
 </div>
 </fieldset>
 <fieldset>
-<legend>Faction and side</legend>
+<legend>Faction</legend>
 <div class="row">
-    <div class="col-sm-4">
-        <div class="form-group">
-			<label>Side</label>
-			<div class="btn-group btn-group-justified" data-toggle="buttons">
-				<label class="btn btn-default active"><input type="radio" name="d" checked value="">Either</label>
-				<label class="btn btn-default"><input type="radio" name="d" value="c">Corp</label>
-				<label class="btn btn-default"><input type="radio" name="d" value="r">Runner</label>
-			</div>
-		</div>
-    </div>
-    <div class="col-sm-8">
+    <div class="col-sm-12">
         <div class="form-group">
 			<label>Faction</label>
 			<div class="btn-group" data-toggle="buttons">
-				<label class="btn btn-default active"><input type="checkbox" name="f[]" checked value="a"><span class="icon icon-anarch anarch"></span></label>
-				<label class="btn btn-default active"><input type="checkbox" name="f[]" checked value="c"><span class="icon icon-criminal criminal"></span></label>
-				<label class="btn btn-default active"><input type="checkbox" name="f[]" checked value="s"><span class="icon icon-shaper shaper"></span></label>
-				<label class="btn btn-default active"><input type="checkbox" name="f[]" checked value="h"><span class="icon icon-haas-bioroid haas-bioroid"></span></label>
-				<label class="btn btn-default active"><input type="checkbox" name="f[]" checked value="j"><span class="icon icon-jinteki jinteki"></span></label>
-				<label class="btn btn-default active"><input type="checkbox" name="f[]" checked value="n"><span class="icon icon-nbn nbn"></span></label>
-				<label class="btn btn-default active"><input type="checkbox" name="f[]" checked value="w"><span class="icon icon-weyland-consortium weyland-consortium"></span></label>
-				<label class="btn btn-default active"><input type="checkbox" name="f[]" checked value="-">Neutral</label>
+			{% for faction in factions %}
+				<label class="btn btn-default active">
+					<input type="checkbox" name="f[]" checked value="{{ faction.code }}">
+					{{ faction.name }}
+				</label>
+			{% endfor %}
 			</div>
 		</div>
     </div>
@@ -88,7 +76,12 @@
         <div class="form-group">
 			<label for="e">Set</label>
 			<div>
-				<select class="form-control" name="e" id="e"><option value="">any</option>{% for pack in packs %}<option value="{{ pack.code }}">{{ pack.name }}</option>{% endfor %}</select>
+				<select class="form-control" name="e" id="e">
+					<option value="">any</option>
+					{% for pack in packs %}
+					<option value="{{ pack.code }}">{{ pack.name }}</option>
+					{% endfor %}
+				</select>
 			</div>
 		</div>
     </div>
@@ -96,7 +89,12 @@
         <div class="form-group">
 			<label for="t">Type</label>
 			<div>
-				<select class="form-control" name="t" id="t"><option value="">any</option>{% for type in types %}<option value="{{ type }}">{{ type }}</option>{% endfor %}</select>
+				<select class="form-control" name="t" id="t">
+					<option value="">any</option>
+					{% for type in types %}
+					<option value="{{ type.code }}">{{ type.name }}</option>
+					{% endfor %}
+				</select>
 			</div>
 		</div>
     </div>
@@ -118,7 +116,12 @@
         <div class="form-group">
 			<label for="s">Subtype</label>
 			<div>
-				<select class="form-control" name="s" id="s"><option value="">any</option>{% for keyword in traits %}<option value="{{ keyword }}">{{ keyword }}</option>{% endfor %}</select>
+				<select class="form-control" name="s" id="s">
+					<option value="">any</option>
+					{% for trait in traits %}
+					<option value="{{ trait }}">{{ trait }}</option>
+					{% endfor %}
+				</select>
 			</div>
 		</div>
     </div>
@@ -141,17 +144,6 @@
 		</div>
     </div>
     <div class="col-sm-6">
-        <div class="form-group">
-			<label for="n">Influence</label>
-			<div class="row">
-                <div class="col-xs-4">
-                    <select name="no" id="no" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
-                </div>
-                <div class="col-xs-8">
-                    <input id="n" name="n" value="" class="form-control">
-                </div>
-			</div>
-		</div>
     </div>
 </div>
 <div class="row">
