client-side data caching done right

--- a/src/AppBundle/Resources/views/Builder/decks.html.twig
+++ b/src/AppBundle/Resources/views/Builder/decks.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 {% block head %}
-<script src="{{ asset('/bundles/app/js/nrdb.card_modal.js') }}"></script>
-<script src="{{ asset('/bundles/app/js/nrdb.diff.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/app.card_modal.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/app.diff.js') }}"></script>
 <script src="{{ asset('/bundles/app/js/decks.js') }}"></script>
 <script type="text/javascript">
 var Identity = null,
