--- a/src/AppBundle/Resources/views/Builder/directimport.html.twig
+++ b/src/AppBundle/Resources/views/Builder/directimport.html.twig
@@ -3,7 +3,7 @@
 {% block head %}
 
 <script src="{{ asset('/bundles/app/js/directimport.js') }}"></script>
-<script src="{{ asset('/bundles/app/js/nrdb.fuzzy_search.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/app.fuzzy_search.js') }}"></script>
 <script src="{{ asset('/bundles/app/libs/string_score.min.js') }}"></script>
 <script type="text/javascript">
 
