--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block head %}
-<script src="{{ asset('/bundles/app/js/nrdb.smart_filter.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/app.smart_filter.js') }}"></script>
 <script src="{{ asset('/bundles/app/js/index.js') }}"></script>
 
 <script type="text/javascript">
