--- a/src/AppBundle/Resources/views/Builder/deck.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deck.html.twig
@@ -2,11 +2,11 @@
 
 {% block head %}
 
-<script src="{{ asset('/bundles/app/js/nrdb.draw_simulator.js') }}"></script>
-<script src="{{ asset('/bundles/app/js/nrdb.card_modal.js') }}"></script>
-<script src="{{ asset('/bundles/app/js/nrdb.smart_filter.js') }}"></script>
-<script src="{{ asset('/bundles/app/js/nrdb.suggestions.js') }}"></script>
-<script src="{{ asset('/bundles/app/js/nrdb.diff.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/app.draw_simulator.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/app.card_modal.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/app.smart_filter.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/app.suggestions.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/app.diff.js') }}"></script>
 <script src="{{ asset('/bundles/app/js/deck.js') }}"></script>
 <script type="text/javascript">
 
