--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -2,9 +2,9 @@
 
 {% block head %}
 
-<script src="{{ asset('/bundles/app/js/nrdb.deck_gallery.js') }}"></script>
-<script src="{{ asset('/bundles/app/js/nrdb.draw_simulator.js') }}"></script>
-<script src="{{ asset('/bundles/app/js/nrdb.card_modal.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/app.deck_gallery.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/app.draw_simulator.js') }}"></script>
+<script src="{{ asset('/bundles/app/js/app.card_modal.js') }}"></script>
 <script src="{{ asset('/bundles/app/js/deckview.js') }}"></script>
 <script type="text/javascript">
 
