--- a/src/AppBundle/Resources/views/google-analytics.html.twig
+++ b/src/AppBundle/Resources/views/google-analytics.html.twig
@@ -1,3 +1,4 @@
+<script type="text/javascript">
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -5,3 +6,4 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-44413511-1', 'auto');
 ga('send', 'pageview');
+</script>
