--- a/src/AppBundle/Resources/views/Search/display-card.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-card.html.twig
@@ -14,7 +14,7 @@
         						{% include 'AppBundle:Search:card-name.html.twig' %}
         					</h3>
         	  			</div>
-        				<div class="panel-body">
+        				<div class="panel-body card-content">
         					{% include 'AppBundle:Search:card-info.html.twig' %}
         					{% include 'AppBundle:Search:card-text.html.twig' %}
         					{% include 'AppBundle:Search:card-flavor.html.twig' %}
