--- a/src/AppBundle/Resources/views/Search/display-spoiler.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-spoiler.html.twig
@@ -11,11 +11,13 @@
 	<h4>
 		{% include 'AppBundle:Search:card-name.html.twig' %}
 	</h4>
-	{% include 'AppBundle:Search:card-info.html.twig' %}
-	{% include 'AppBundle:Search:card-text.html.twig' %}
-	{% include 'AppBundle:Search:card-flavor.html.twig' %}
-	{% include 'AppBundle:Search:card-illustrator.html.twig' %}
-	{% include 'AppBundle:Search:card-pack-faction.html.twig' %}
+	<div class="card-content">
+		{% include 'AppBundle:Search:card-info.html.twig' %}
+		{% include 'AppBundle:Search:card-text.html.twig' %}
+		{% include 'AppBundle:Search:card-flavor.html.twig' %}
+		{% include 'AppBundle:Search:card-illustrator.html.twig' %}
+		{% include 'AppBundle:Search:card-pack-faction.html.twig' %}
+	</div>
 </div>
 {% endif %}
 {% endfor %}
