--- a/src/AppBundle/Resources/views/Search/display-zoom.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-zoom.html.twig
@@ -21,7 +21,7 @@ app.user.params.card_id = {{ cards[0].id|json_encode|raw }};
         						{% include 'AppBundle:Search:card-name.html.twig' %}
         					</h3>
         	  			</div>
-        				<div class="panel-body">
+        				<div class="panel-body card-content">
         					{% include 'AppBundle:Search:card-info.html.twig' %}
         					{% include 'AppBundle:Search:card-text.html.twig' %}
         					{% include 'AppBundle:Search:card-flavor.html.twig' %}
